--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Tour World</title>
 </head>
 <body>
     <div class="container">
-        <h1 class="tworld">T World</h1>
+        <h1 class="tworld">Tour World</h1>
         <div class="nav">
             <a href="">Home</a>
             <a href="">About</a>
